tests/rosetta/out/Java/boyer-moore-string-search.error
javac error: exit status 1
/tmp/TestMochiToJavaboyer-moore-string-search1839843898/001/BoyerMooreStringSearch.java:48: error: incompatible types: String cannot be converted to Number
            s = s + ((Number)String.valueOf(nums.get(i))).doubleValue();
                                           ^
/tmp/TestMochiToJavaboyer-moore-string-search1839843898/001/BoyerMooreStringSearch.java:59: error: incompatible types: String cannot be converted to Number
            System.out.println("text" + String.valueOf(i + 1) + " = " + ((Number)texts.get(i)).doubleValue());
                                                                                          ^
/tmp/TestMochiToJavaboyer-moore-string-search1839843898/001/BoyerMooreStringSearch.java:66: error: incompatible types: String cannot be converted to Number
            System.out.println(((Number)((Number)((Number)((Number)"Found \"" + ((Number)patterns.get(j)).doubleValue()).doubleValue() + "\" in 'text").doubleValue() + String.valueOf(j + 1)).doubleValue() + "' at indexes ").doubleValue() + display(idxs));
                                                                   ^
/tmp/TestMochiToJavaboyer-moore-string-search1839843898/001/BoyerMooreStringSearch.java:66: error: incompatible types: String cannot be converted to Number
            System.out.println(((Number)((Number)((Number)((Number)"Found \"" + ((Number)patterns.get(j)).doubleValue()).doubleValue() + "\" in 'text").doubleValue() + String.valueOf(j + 1)).doubleValue() + "' at indexes ").doubleValue() + display(idxs));
                                                                                                     ^
/tmp/TestMochiToJavaboyer-moore-string-search1839843898/001/BoyerMooreStringSearch.java:66: error: cannot find symbol
            System.out.println(((Number)((Number)((Number)((Number)"Found \"" + ((Number)patterns.get(j)).doubleValue()).doubleValue() + "\" in 'text").doubleValue() + String.valueOf(j + 1)).doubleValue() + "' at indexes ").doubleValue() + display(idxs));
                                                                                                                                                       ^
  symbol:   method doubleValue()
  location: class String
/tmp/TestMochiToJavaboyer-moore-string-search1839843898/001/BoyerMooreStringSearch.java:66: error: cannot find symbol
            System.out.println(((Number)((Number)((Number)((Number)"Found \"" + ((Number)patterns.get(j)).doubleValue()).doubleValue() + "\" in 'text").doubleValue() + String.valueOf(j + 1)).doubleValue() + "' at indexes ").doubleValue() + display(idxs));
                                                                                                                                                                                              ^
  symbol:   method doubleValue()
  location: class String
/tmp/TestMochiToJavaboyer-moore-string-search1839843898/001/BoyerMooreStringSearch.java:66: error: cannot find symbol
            System.out.println(((Number)((Number)((Number)((Number)"Found \"" + ((Number)patterns.get(j)).doubleValue()).doubleValue() + "\" in 'text").doubleValue() + String.valueOf(j + 1)).doubleValue() + "' at indexes ").doubleValue() + display(idxs));
                                                                                                                                                                                                                               ^
  symbol:   method doubleValue()
  location: class String
7 errors
